--- a/homework-1/index.html
+++ b/homework-1/index.html
@@ -24,31 +24,47 @@
                 <div>
                     <img src="./img/img-1.jpg" alt="img-1"> 
                     <p>lifestyle</p> 
-                    <h2>title</h2> 
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, sequi.</p>
+                    <h2>More than just a music festival</h2> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde
+                    omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                    inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                    aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+                    porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
+                    tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </div>
                 <div>
                     <img src="./img/img-2.jpg" alt="img-2"> 
                     <p>photodiary</p> 
-                    <h2>title</h2> 
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, sequi.</p>
+                    <h2>Life tastes better with coffee</h2> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde
+                    omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                    inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                    aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+                    porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
+                    tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </div>
                 <div>
                     <img src="./img/img-3.jpg" alt="img-3"> 
                     <p>music</p> 
-                    <h2>title</h2> 
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, sequi.</p>
+                    <h2>American dream</h2> 
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloribus delectus eveniet! Saepe error obcaecati porro eveniet magnam, quibusdam assumenda id dolorem architecto cumque adipisci tenetur temporibus esse possimus quos suscipit placeat harum voluptatum consectetur nulla ratione autem earum inventore. Facere illum molestias architecto voluptate ipsa? Sit expedita quos fuga numquam! Labore quasi iusto maxime aliquam possimus nemo libero nobis neque dolorem praesentium eligendi rerum quo dolorum odio officia nulla amet enim magni voluptatem voluptas tenetur harum, quisquam aut nam! Necessitatibus repellat quae aperiam consectetur numquam odio provident atque ducimus exercitationem, molestiae nesciunt saepe illum animi ex delectus officia cum!</p>
                 </div>
                 <div>
                     <img src="./img/img-4.jpg" alt="img-4"> 
                     <p>travel</p> 
-                    <h2>title</h2> 
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, sequi.</p>
+                    <h2>A day exploring the Alps</h2> 
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptates praesentium molestiae ad molestias maxime doloribus odio amet optio? Incidunt recusandae minima nobis reprehenderit temporibus a optio placeat ipsam aliquam, cumque quos earum molestias officia. Mollitia excepturi ex ipsum minima illum! Quae soluta praesentium eius reiciendis reprehenderit consequatur, impedit nobis suscipit asperiores ratione illum laborum nisi quisquam voluptatibus veritatis, deleniti illo! Est laudantium repellat maiores consectetur dolor autem vel quo doloribus deserunt similique. Quibusdam fuga atque suscipit culpa illum recusandae ad soluta ab, id quam pariatur iusto quod unde numquam nobis nostrum, iure deserunt fugiat officia quaerat. Reiciendis, harum eius.</p>
                 </div>
             </div>
             <div>
                 <button>
-                    Load more
+                    LOAD MORE
                 </button>
             </div>
         </section>
