--- a/homework-3/index.html
+++ b/homework-3/index.html
@@ -93,7 +93,7 @@
 
             <!-- кнопка -->
             <div class="btn-wrap">
-                <button class="more">Load more</button>
+                <button class="more">Load more т</button>
             </div>
         </div>
     </main>
