--- a/homework-3/index.html
+++ b/homework-3/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <title>Homework-3</title>
 </head>
 <body>
@@ -35,11 +39,60 @@
     <!-- Тіло/контент сайту -->
     <main class="main">
         <div class="container">
+            <div class="div-main_1">
+                <div class="block-Lifestyle_left">
+                    <img src="./img/image-1.jpg" alt="Lifestyle" class="img Lifestyle_left">
+                    <p class="signature">Lifestyle</p>
+                    <h2 class="title_h2">More than just a music festival</h2>
+                    <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                </div>
+                <div class="block-Lifestyle_right">
+                    <img src="./img/image-2.jpg" alt="Lifestyle" class="img Lifestyle_right">
+                    <p class="signature">Lifestyle</p>
+                    <h2 class="title_h2">Life tastes better with coffee</h2>
+                    <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                </div>
+            </div>
+            <div class="div-main_2">
+                <div class="block-Photodiary_left">
+                    <img src="./img/image-3.jpg" alt="Photodiary" class="img Photodiary_left">
+                    <p class="signature">photodiary</p>
+                    <h2 class="title_h2">American dream</h2>
+                    <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                </div>
+                <div class="block-Photodiary_right">
+                    <img src="./img/image-4.jpg" alt="Photodiary" class="img Photodiary_right">
+                    <p class="signature">photodiary</p>
+                    <h2 class="title_h2">A day exploring the Alps</h2>
+                    <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                </div>
+            </div>
+            <div class="div-main_3">
+                <div class="block-Lifestyle-2_left">
+                    <img src="./img/image-5.jpg" alt="Lifestyle" class="img Lifestyle_left">
+                    <p class="signature">lifestyle</p>
+                    <h2 class="title_h2">Top 10 song for running</h2>
+                    <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                </div>
+                <div class="block-Lifestyle-2_right">
+                    <img src="./img/image-6.jpg" alt="Lifestyle" class="img Lifestyle_right">
+                    <p class="signature">lifestyle</p>
+                    <h2 class="title_h2">Cold winter days</h2>
+                    <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                </div>
+            </div>
+        </div>
 
+        <!-- Кнопка -->
+        <div class="btn-wrap">
+            <button class="more">Load more</button>
         </div>
     </main>
-
-    <!-- Кнопка -->
-
 </body>
 </html>
