--- a/homework-3/index.html
+++ b/homework-3/index.html
@@ -39,7 +39,7 @@
     <!-- Тіло/контент сайту -->
     <main class="main">
         <div class="container">
-            <div class="div-main_1">
+            <section class="section-main_1">
                 <div class="block-Lifestyle_left">
                     <img src="./img/image-1.jpg" alt="Lifestyle" class="img Lifestyle_left">
                     <p class="signature">Lifestyle</p>
@@ -54,8 +54,8 @@
                     <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
                 </div>
-            </div>
-            <div class="div-main_2">
+            </section>
+            <section class="section-main_2">
                 <div class="block-Photodiary_left">
                     <img src="./img/image-3.jpg" alt="Photodiary" class="img Photodiary_left">
                     <p class="signature">photodiary</p>
@@ -70,8 +70,8 @@
                     <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
                 </div>
-            </div>
-            <div class="div-main_3">
+            </section>
+            <section class="section-main_3">
                 <div class="block-Lifestyle-2_left">
                     <img src="./img/image-5.jpg" alt="Lifestyle" class="img Lifestyle_left">
                     <p class="signature">lifestyle</p>
@@ -86,7 +86,7 @@
                     <p class="signature_after_the_title-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
                 </div>
-            </div>
+            </section>
         </div>
 
         <!-- Кнопка -->
