--- a/homework-5/index.html
+++ b/homework-5/index.html
@@ -132,16 +132,16 @@
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook.jpg" alt="facebook" class="social-icons facebook">
+                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter.jpg" alt="twitter" class="social-icons twitter">
+                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest.jpg" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram.jpg" alt="instagram" class="social-icons instagram">
+                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
@@ -155,16 +155,16 @@
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook.jpg" alt="facebook" class="social-icons facebook">
+                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter.jpg" alt="twitter" class="social-icons twitter">
+                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest.jpg" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram.jpg" alt="instagram" class="social-icons instagram">
+                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
@@ -178,16 +178,16 @@
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook.jpg" alt="facebook" class="social-icons facebook">
+                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter.jpg" alt="twitter" class="social-icons twitter">
+                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest.jpg" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram.jpg" alt="instagram" class="social-icons instagram">
+                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
