--- a/homework-5/index.html
+++ b/homework-5/index.html
@@ -208,7 +208,7 @@
         <div class="container">
             <div class="footer_p_form">
                 <div class="footer_p">
-                    <p class="footer___p">© 2016 MoGo free PSD template by <span class="p_span">Laaqiq</span></p>
+                    <p class="footer___p">© 2016 MoGo free PSD template by <a href="#" class="p_a">Laaqiq</a></p>
                 </div>
                 <div class="footer_form">
                     <form action="./php/auth.html" method="GET" target="_blank" class="footer___form">
