--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -1,4 +1,4 @@
-./img/services-icons<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -51,8 +51,7 @@
                 <div class="services_items">
                     <div class="service_item-1 block">
                         <div class="service-img">
-                            <img src="./img/services-icons/block 1/Icon-Basket.jpg" alt="Icon-Basket" width="40px" height="39px" class="service_item-1__img1">
-                            <img src="./img/services-icons/block 1/Circle-1.jpg" alt="" width="" height="" class="service_item-1__img2">
+                            <!-- <img src="./img/services-icons/block 1/Icon-Basket.jpg" alt="Icon-Basket" width="40px" height="39px" class="service_item-1__img1"> -->
                         </div>
                         <div class="service-item_signature_title">
                             <p class="service-item_title">E-Commerce</p>
@@ -93,8 +92,10 @@
 
     <!-- FOOTER -->
     <footer class="footer">
+        <div class="bakground_img">
+            <img src="./img/footer/Map Image.png" alt="Map image">
+        </div>
         <div class="container">
-
         </div>
     </footer>
 
