--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@1,300&family=Kaushan+Script&family=Montserrat:wght@400;700&family=Oleo+Script+Swash+Caps&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
 </head>
 <body>
     
 
-    <!-- HEADER -->
+    <!-- =====================HEADER===================== -->
     <header class="header">
         <div class="container">
             <nav class="navigation">
@@ -40,48 +42,52 @@
     </header>
 
 
-    <!-- MAIN -->
+    <!--=====================MAIN===================== -->
     <main class="main">
         <section class="main-section1">
             <div class="container">
-                <div class="services___signature">
+                <div class="services_____signature">
                     <h2 class="services">Services</h2>
                     <p class="signature_services">Proin iaculis purus consequat sem cure.</p>
                 </div>
                 <div class="services_items">
-                    <div class="service_item-1 block">
+                    <div class="service_item-1 services_item">
                         <div class="service-img">
-                            <!-- <img src="./img/services-icons/block 1/Icon-Basket.jpg" alt="Icon-Basket" width="40px" height="39px" class="service_item-1__img1"> -->
+                            <img src="./img/main/services-icons/block 1/Icon-Basket.jpg" alt="Icon-Basket" class="services___img">
                         </div>
                         <div class="service-item_signature_title">
                             <p class="service-item_title">E-Commerce</p>
                         </div>
                         <div class="service-item_signature">
-                            <p class="services___signature"></p>
+                            <p class="services___description">Proin iaculis purus consequat sem cure
+                            digni ssim. Donec porttitora entum suscipit
+                            aenean rhoncus posuere odio in tincidunt.</p>
                         </div>
                     </div>
-                    <div class="service_item-2">
+                    <div class="service_item-2 services_item">
                         <div class="service-img">
-                            <img src="" alt="" width="" height="" class="">
-                            <img src="" alt="" class="">
+                            <img src="./img/main/services-icons/block 2/Icon-Laptop.jpg" alt="Icon-Laptop" class="services___img">
                         </div>
                         <div class="service-item_signature_title">
                             <p class="service-item_title">Responsive Web</p>
                         </div>
                         <div class="service-item_signature">
-                            <p class="services___signature"></p>
+                            <p class="services___description">Proin iaculis purus consequat sem cure
+                            digni ssim. Donec porttitora entum suscipit
+                            aenean rhoncus posuere odio in tincidunt.</p>
                         </div>
                     </div>
-                    <div class="service_item-3">
+                    <div class="service_item-3 services_item">
                         <div class="service-img">
-                            <img src="" alt="" width="" height="" class="">
-                            <img src="" alt="" class="">
+                            <img src="./img/main/services-icons/block 3/Icon-Locked.jpg" alt="Icon-Locked" class="services___img">
                         </div>
                         <div class="service-item_signature_title">
                             <p class="service-item_title">Web Security</p>
                         </div>
                         <div class="service-item_signature">
-                            <p class="services___signature"></p>
+                            <p class="services___description">Proin iaculis purus consequat sem cure
+                            digni ssim. Donec porttitora entum suscipit
+                            aenean rhoncus posuere odio in tincidunt.</p>
                         </div>
                     </div>
                 </div>
@@ -90,12 +96,34 @@
     </main>
 
 
-    <!-- FOOTER -->
+    <!-- =====================FOOTER===================== -->
     <footer class="footer">
-        <div class="bakground_img">
-            <img src="./img/footer/Map Image.png" alt="Map image">
-        </div>
         <div class="container">
+            <div class="contact_us">
+                <h2 class="title-contact_us">Contact us</h2>
+                <p class="discription_of_contact_us">Proin iaculis purus consequat sem cure.</p>
+            </div>
+            <div class="form_div">
+                <form action="./php/auth.html" name="" method="GET" class="form" target="_blank">
+                    <div class="_3_inputs">
+                        <div class="_1_input __3_inputs">
+                            <input type="text" name="your Name *" required placeholder="your Name *" class="input">
+                        </div>
+                        <div class="_2_input __3_inputs">
+                            <input type="text" required placeholder="your e-mail *" class="input">
+                        </div>
+                        <div class="_3_input __3_inputs">
+                            <input type="text" placeholder="subject" class="input">
+                        </div>
+                    </div>
+                    <div class="dsv_responsive">
+                        <input type="text" required placeholder="Your message *" class="response">
+                    </div>
+                    <div class="btn_sent_form">
+                        <button type="submit">Send Message</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </footer>
 
