--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -116,7 +116,7 @@
                             <input type="text" placeholder="subject" class="input">
                         </div>
                     </div>
-                    <div class="dsv_responsive">
+                    <div class="div_responsive">
                         <input type="text" required placeholder="Your message *" class="response">
                     </div>
                     <div class="btn_sent_form">
@@ -126,7 +126,7 @@
             </div>
         </div>
     </footer>
-
+    <!-- =============================================================== -->
 
 </body>
 </html>
