--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -106,18 +106,12 @@
             <div class="form_div">
                 <form action="./php/auth.html" name="" method="GET" class="form" target="_blank">
                     <div class="_3_inputs">
-                        <div class="_1_input __3_inputs">
                             <input type="text" name="your Name *" required placeholder="your Name *" class="input">
-                        </div>
-                        <div class="_2_input __3_inputs">
                             <input type="text" required placeholder="your e-mail *" class="input">
-                        </div>
-                        <div class="_3_input __3_inputs">
                             <input type="text" placeholder="subject" class="input">
-                        </div>
                     </div>
                     <div class="div_responsive">
-                        <input type="text" required placeholder="Your message *" class="response">
+                        <textarea name="" id="" cols="30" rows="10" class="responsive"></textarea>
                     </div>
                     <div class="btn_sent_form">
                         <button type="submit">Send Message</button>
