--- a/Practical work 3_JS/index.html
+++ b/Practical work 3_JS/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
             <h1 class="h1_header">Practical work 3</h1>
-        </div>
+        <div>
     </header>
     <!-- ===================================================== -->
 
