--- a/homework-5/index.html
+++ b/homework-5/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,11 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
-
-    
 
     <!-- HEADER -->
     <header class="header">
@@ -53,8 +48,6 @@
         </div>
     </header>
 
-
-
     <!-- MAIN -->
     <main class="main">
         <section class="Amazing___Services">
@@ -71,7 +64,7 @@
                         </div>
                     </div>
                     <div class="service-item 2">
-                        <img src="./img/services/icons/WEB DESIGN.jpg" alt="WEB DESIGN" class="img_services">
+                        <img src="./img/services/icons/WEB_DESIGN.jpg" alt="WEB DESIGN" class="img_services">
                         <div class="service-item_p">
                             <p class="services-item_title">Web Design</p>
                             <p class="services-item_text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -130,20 +123,20 @@
                     <div class="meet_our_team_block-display">
                         <div class="img-block__img_z">
                             <div class="img-container">
-                                <img src="./img/team/MATTEHEW DIX.jpg" alt="MATTEHEW DIX" class="team_img">
+                                <img src="./img/team/MATTEHEW_DIX.jpg" alt="MATTEHEW DIX" class="team_img">
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
+                                            <img src="./img/social_icons/facebook_2.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
+                                            <img src="./img/social_icons/twitter_2.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./img/social_icons/pinterest_2.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
+                                            <img src="./img/social_icons/instagram_2.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
@@ -153,20 +146,20 @@
                         </div>
                         <div class="img-block__img_x">
                             <div class="img-container">
-                                <img src="./img/team/CHRISTOPHER CAMPBELL.jpg" alt="CHRISTOPHER CAMPBELL" class="team_img">
+                                <img src="./img/team/CHRISTOPHER_CAMPBELL.jpg" alt="CHRISTOPHER CAMPBELL" class="team_img">
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
+                                            <img src="./img/social_icons/facebook_2.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
+                                            <img src="./img/social_icons/twitter_2.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./img/social_icons/pinterest_2.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
+                                            <img src="./img/social_icons/instagram_2.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
@@ -176,20 +169,20 @@
                         </div>
                         <div class="img-block__img_c">
                             <div class="img-container">
-                                <img src="./img/team/MICHAEL FERTIC.jpg" alt="MICHAEL FERTIC" class="team_img">
+                                <img src="./img/team/MICHAEL_FERTIC.jpg" alt="MICHAEL FERTIC" class="team_img">
                                 <div class="hover-box">
                                     <div class="social-box">
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/facebook 2.png" alt="facebook" class="social-icons facebook">
+                                            <img src="./img/social_icons/facebook_2.png" alt="facebook" class="social-icons facebook">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/twitter 2.png" alt="twitter" class="social-icons twitter">
+                                            <img src="./img/social_icons/twitter_2.png" alt="twitter" class="social-icons twitter">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/pinterest 2.png" alt="pinterest" class="social-icons pinterest">
+                                            <img src="./img/social_icons/pinterest_2.png" alt="pinterest" class="social-icons pinterest">
                                         </a>
                                         <a href="#" class="social-link">
-                                            <img src="./img/social icons/instagram 2.png" alt="instagram" class="social-icons instagram">
+                                            <img src="./img/social_icons/instagram_2.png" alt="instagram" class="social-icons instagram">
                                         </a>
                                     </div>
                                 </div>
@@ -197,14 +190,11 @@
                             <p class="developer_name">Michael Fertig</p>
                             <p class="his_work">Developer</p>
                         </div>
-
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
-
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -215,17 +205,12 @@
                 </div>
                 <div class="footer_form">
                     <form action="./php/auth.html" method="GET" target="_blank" class="footer___form">
-                        <input type="text" name="user-email" inputmode="email" required placeholder="Your Email..."
-                            class="footer___input">
+                        <input type="text" name="user-email" required placeholder="Your Email..." class="footer___input">
                         <button type="submit" class="footer_btn_send">Subscribe</button>
                     </form>
                 </div>
             </div>
         </div>
     </footer>
-
-    
-
 </body>
-
 </html>
