--- a/Practical work 5_JS/index.html
+++ b/Practical work 5_JS/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html4 lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,4 +36,4 @@
         <!-- ===================================================== -->
 
     </body>
-</html4
+</html>
