--- a/homework-6/php/auth.html
+++ b/homework-6/php/auth.html
@@ -12,13 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header></header>
     <main class="main">
         <div class="container">
             <div class="div_alert">
-                <h1 class="alert">The form was been sent!</h1>
-                <h2 class="alert_2">Thank you for using our services!</h2>
+                <h1 class="alert ha">The form was been sent!</h1>
+                <h2 class="alert_2 ha">Thank you for using our services!</h2>
             </div>
         </div>
     </main>
+    <footer></footer>
 </body>
 </html>
