--- a/homework-6/index.html
+++ b/homework-6/index.html
@@ -98,10 +98,10 @@
                 <p class="discription_of_contact_us">Proin iaculis purus consequat sem cure.</p>
             </div>
             <div class="form_div">
-                <form action="./php/auth.html" name="" method="GET" class="form" target="_blank">
+                <form action="./php/auth.html" method="GET" class="form" target="_blank">
                     <div class="_3_inputs_and_textarea">
                         <div class="_3_inputs">
-                            <input type="text" name="your Name *" required placeholder="your Name *" class="input input_1">
+                            <input type="text" required placeholder="your Name *" class="input input_1">
                             <input type="text" required placeholder="your e-mail *" class="input input_1">
                             <input type="text" placeholder="subject" class="input input_1">
                         </div>
