--- a/homework-7/index.html
+++ b/homework-7/index.html
@@ -30,9 +30,9 @@
                     <h2 class="Share_your_holiday_dreams">Share your<br>holiday dreams</h2>
                     <p class="And_find_the_perfect_partner_to_fullfill_it">And find the perfect partner to fullfill it</p>
                 </div>
-                <a href="#" class="btn_header">
+                <div class="btn_header">
                     <button class="btn-header">Find your holiday partner</button>
-                </a>
+                </div>
             </div>
         </div>
     </header>
@@ -42,7 +42,7 @@
                 <p class="main_description">Meet a partner for your best holiday</p>
             </div>
             <div class="the_persons">
-                <div class="block_with_2_person__1">
+                <!-- <div class="block_with_2_person__1"> -->
                     <div class="Bradley_Hunter person">
                         <div class="img_bradley_hunter">
                             <img src="./img/main/persons/Bradley.png" alt="Bradley Hunter" class="bradley_hunter">
@@ -63,8 +63,8 @@
                         <p class="name_person">Heather Walker</p>
                         <p class="description_about_person">I'm a happy person that loves cats and climbing on mountains.</p>
                     </div>
-                </div>
-                <div class="block_with_2_persons__2">
+                <!-- </div> -->
+                <!-- <div class="block_with_2_persons__2"> -->
                     <div class="Lucas_Marsha person">
                         <div class="img_lucas_marsha">
                             <img src="./img/main/persons/Lucas.png" alt="Lucas Marsha" class="lucas-marsha">
@@ -85,7 +85,7 @@
                         <p class="name_person">Bradley Hunter</p>
                         <p class="description_about_person">Based in Chicago. I love playing tennis and loud music.</p>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
     </main>
